# advent

./: .dir-locals.el  .gitignore  README.md
2015/01/: Main.hs
2015/02/: Main.hs
2015/03/: Main.hs
2019/: advent2019.cabal
2019/01/: Main.hs
2019/02/: Main.hs  input
2019/03/: Main.hs
2019/04/: Main.hs
2019/06/: Main.hs
2019/07/: Main.hs
2019/09/: Main  Main.hs
2019/12/: Main.hs
2019/24/: Main.hs
2020/: advent2020.cabal
2020/01/: Main.hs
2020/02/: Main.hs
2020/03/: Main.hs  small
2020/04/: Main.hs  input
2020/05/: Main.hs
2020/06/: Main.hs
2020/07/: Main.hs  input
2020/08/: Main.hs
2020/09/: Main.hs  small
2020/10/: Main.hs
2020/11/: Main.hs
2020/12/: Main.hs
2020/13/: Main.hs
2020/14/: Main.hs  input  sample  small
2020/15/: Main.hs
2020/16/: Main.hs
2020/18/: Main.hs
2020/23/: Main.hs
2020/src/: Advent.hs
2021/01/: Main.hs
2021/02/: Main.hs
2021/03/: Main.hs
2021/04/: Main.hs  x04.cabal
2021/05/: Main.hs
2021/06/: Bag.hs  Main.hs
2021/07/: Main.hs
2021/08/: Main.hs
2021/10/: Main.hs
2021/11/: Main.hs
2021/12/: Main.hs
2021/14/: Bag.hs  Main.hs
2021/15/: Main.hs
2021/16/: Main.hs
2021/18/: Main.hs
2021/21/: Main.hs
2021/24/: Main.hs
2021/25/: Main.hs
2023/01/: Main.hs
2023/02/: Main.hs
2023/03/: Main.hs
2023/04/: Main.hs
2023/05/: Main.hs
2023/06/: Main.hs
2023/07/: Main.hs
2023/08/: Main.hs
2023/09/: Main.hs
2023/10/: Main.hs
2023/11/: Main.hs
2023/12/: Main.hs
2023/13/: Main.hs
2023/14/: Main.hs
2023/15/: Main.hs
2023/16/: Main.hs
2023/17/: Main.hs
2023/19/: Main.hs
2023/21/: Main.hs
2023/23/: Main.hs
2024/01/: Main.hs
2024/02/: Main.hs
2024/03/: Main.hs
2024/04/: Main.hs
2024/05/: Main.hs
2024/06/: Main.hs
2024/07/: Main.hs
2024/08/: Main.hs
2024/10/: Main.hs
2024/11/: Main.hs
2024/14/: Main.hs
2024/19/: Main.hs
2024/22/: Main.hs
2024/23/: CHANGELOG.md  LICENSE  Main.hs  x23.cabal
2024/23/Data/Graph/: Clique.hs
2024/25/: Main.hs
