cabal-version:       >=1.10
name:                advent2020
version:             0.1.0.0
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.13 && <4.14
  exposed-modules:     Advent
  hs-source-dirs:      src

executable 01
  main-is:             Main.hs
  hs-source-dirs:      01
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 02
  main-is:             Main.hs
  hs-source-dirs:      02
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 03
  main-is:             Main.hs
  hs-source-dirs:      03
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 04
  main-is:             Main.hs
  hs-source-dirs:      04
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 05
  main-is:             Main.hs
  hs-source-dirs:      05
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 06
  main-is:             Main.hs
  hs-source-dirs:      06
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 07
  main-is:             Main.hs
  hs-source-dirs:      07
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 08
  main-is:             Main.hs
  hs-source-dirs:      08
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 09
  main-is:             Main.hs
  hs-source-dirs:      09
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 10
  main-is:             Main.hs
  hs-source-dirs:      10
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 11
  main-is:             Main.hs
  hs-source-dirs:      11
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 12
  main-is:             Main.hs
  hs-source-dirs:      12
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 13
  main-is:             Main.hs
  hs-source-dirs:      13
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 14
  main-is:             Main.hs
  hs-source-dirs:      14
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 15
  main-is:             Main.hs
  hs-source-dirs:      15
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 16
  main-is:             Main.hs
  hs-source-dirs:      16
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 17
  main-is:             Main.hs
  hs-source-dirs:      17
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 18
  main-is:             Main.hs
  hs-source-dirs:      18
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 19
  main-is:             Main.hs
  hs-source-dirs:      19
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 20
  main-is:             Main.hs
  hs-source-dirs:      20
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 21
  main-is:             Main.hs
  hs-source-dirs:      21
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 22
  main-is:             Main.hs
  hs-source-dirs:      22
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 23
  main-is:             Main.hs
  hs-source-dirs:      23
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 24
  main-is:             Main.hs
  hs-source-dirs:      24
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010

executable 25
  main-is:             Main.hs
  hs-source-dirs:      25
  build-depends:       base >=4.13 && <4.14
                     , advent2020
  default-language:    Haskell2010
