cabal-version:   3.0
name:            x04
version:         0.1.0.0
license:         NONE
author:          fhi.1990@gmail.com
maintainer:      Frederik Hanghøj Iversen
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
    ghc-options: -Wall
    build-depends: base, singletons, array
    default-extensions:
        RoleAnnotations
      , GADTs
      , DataKinds
      , InstanceSigs
      , ScopedTypeVariables
      , DerivingStrategies
      , TypeApplications
      , TypeFamilies
      , StandaloneDeriving
      , StandaloneKindSignatures

executable x04
    import:           common
    main-is:          Main.hs
    hs-source-dirs:   .
    default-language: Haskell2010

